[package]
name = "ksym"
authors = ["Linfeng Chen <chenlinfeng25@outlook.com>"]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/Starry-OS/ksym"
repository = "https://github.com/Starry-OS/ksym"


[dependencies]
rustc-demangle = { version = "0.1", optional = true }
lazyinit = "0.2"

[features]
demangle = ["dep:rustc-demangle"]
assembly = []

[[bin]]
name = "gen_ksym"
required-features = ["demangle"]

[[bin]]
name = "gen_ksym_as"
required-features = ["demangle"]
